apps/k8s/kustomize/base/authms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authms
  namespace: cargo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authms
  template:
    metadata:
      labels:
        app: authms
    spec:
      containers:
        - name: authms
          image: cargo-authms:0.0.1
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 90
            periodSeconds: 30
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: authms
  namespace: cargo
spec:
  selector:
    app: authms
  ports:
    - port: 8081
      targetPort: 8081
