apps/k8s/kustomize/base/gatewayms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayms
  namespace: cargo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayms
  template:
    metadata:
      labels:
        app: gatewayms
    spec:
      containers:
        - name: gatewayms
          image: cargo-gatewayms:0.0.1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: gatewayms
  namespace: cargo
spec:
  selector:
    app: gatewayms
  ports:
    - port: 8080
      targetPort: 8080
