apps/k8s/kustomize/base/trackingms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trackingms
  namespace: cargo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trackingms
  template:
    metadata:
      labels:
        app: trackingms
    spec:
      containers:
        - name: trackingms
          image: cargo-trackingms:0.0.1
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8084
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8084
            initialDelaySeconds: 90
            periodSeconds: 30
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: trackingms
  namespace: cargo
spec:
  selector:
    app: trackingms
  ports:
    - port: 8084
      targetPort: 8084
